--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -19,3 +19,6 @@ jobs:
           plugin_languages_ignored: html, css
           plugin_languages_details: bytes-size, percentage
           plugin_languages_indepth: yes   # analyze what you actually touched
+          plugin_habits: yes
+          plugin_habits_facts: yes
+          plugin_habits_charts: yes
