--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -17,7 +17,7 @@ jobs:
           repositories_affiliations: ""   # include owner+collaborator+org
           plugin_languages: yes
           plugin_languages_ignored: html, css
-          plugin_languages_details: bytes-size, percentage
+          plugin_languages_details: percentage
           plugin_languages_indepth: yes   # analyze what you actually touched
           plugin_habits: yes
           plugin_habits_facts: yes
